--- a/static/css/base.css
+++ b/static/css/base.css
@@ -158,3 +158,24 @@ body {
     margin-left: 8px;
 
 }
+
+/* products details page */
+
+.scale-meter {
+    height: 20px;
+}
+
+.progress {
+    width: 100%;
+}
+
+.color-scale-marker {
+    background-color: grey;
+    height: 40Px;
+    width: 40px;
+    border-radius: 50%;
+}
+
+.color-scale-marker-active {
+    border: 5px solid black;
+}
