--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -34,26 +34,118 @@
 
 {% block content %}
 <section class="container-fluid new-section-margin ">
-    <div class="row text-center">
-        {% for product in products %}
-        <div class="col-xl-3 col-lg-4 col-md-6  d-flex justify-content-center">
-            <div class="card mb-5" style="width: 18rem;">
-                <a href="{% url 'product_detail' product.id %}">
-                    <img src="{{ product.image_url }}" class="card-img-top" alt="Drink of a {{ product.product_name }}">
-                </a>
-                <div class="card-body">
-                    <h4 class="card-title">{{ product.product_name }}</h4>
-                    <div class="row d-flex justify-content-center card_descriptive_words">
-                        {% for adjective in product.descriptive_words %}
-                        <h5 class="descritive_product_words">{{ adjective }}.</h5>
-                        {% endfor %}
-                    </div>
-                    <p class="card-text">{{ product.product_price }}</p>
-                    <a href="#" class="btn btn-primary">Buy Now</a>
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2 class="logo-font">Products</h2>
+            {% for style in current_styles %}
+            <a class="category-badge text-decoration-none" href="{% url 'products' %}?style={{ style.name }}">
+                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ style.name }}</span>
+            </a>
+            {% endfor %}
+            <hr class="w-100 mb-1">
+        </div>
+    </div>
+    <div class="product-container col-10 offset-1">
+        <div class="row mt-1 mb-2">
+            <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                <div class="sort-select-wrapper w-50">
+                    <select id="sort-selector"
+                        class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                        <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
+                        </option>
+                        <option value="product_price__asc"
+                            {% if current_sorting == 'product_price__asc' %}selected{% endif %}>Price (low
+                            to high)</option>
+                        <option value="product_price__desc"
+                            {% if current_sorting == 'product_price__desc' %}selected{% endif %}>Price
+                            (high to low)</option>
+                        <option value="product_rating__asc"
+                            {% if current_sorting == 'product_rating__asc' %}selected{% endif %}>Rating
+                            (low to high)</option>
+                        <option value="product_rating__desc"
+                            {% if current_sorting == 'product_rating__desc' %}selected{% endif %}>Rating
+                            (high to low)</option>
+                        <option value="product_name__asc"
+                            {% if current_sorting == 'product_name__asc' %}selected{% endif %}>Name (A-Z)
+                        </option>
+                        <option value="product_name__desc"
+                            {% if current_sorting == 'product_name__desc' %}selected{% endif %}>Name (Z-A)
+                        </option>
+                        <option value="style__asc" {% if current_sorting == 'style__asc' %}selected{% endif %}>
+                            Style (A-Z)</option>
+                        <option value="style__desc" {% if current_sorting == 'style__desc' %}selected{% endif %}>
+                            Style (Z-A)</option>
+                    </select>
                 </div>
             </div>
+            <div class="col-12 col-md-6 order-md-first">
+                <p class="text-muted mt-3 text-center text-md-left">
+                    {% if search_term or current_categories or current_sorting != 'None_None' %}
+                    <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                    {% endif %}
+                    {{ products|length }} Products{% if search_term %} found for
+                    <strong>"{{ search_term }}"</strong>{% endif %}
+                </p>
+            </div>
         </div>
-        {% endfor %}
-    </div>
+        <div class="row text-center">
+            {% for product in products %}
+            <div class="col-xl-3 col-lg-4 col-md-6  d-flex justify-content-center">
+                <div class="card mb-5" style="width: 18rem;">
+                    <a href="{% url 'product_detail' product.id %}">
+                        <img src="{{ product.image_url }}" class="card-img-top"
+                            alt="Drink of a {{ product.product_name }}">
+                    </a>
+                    <div class="card-body">
+                        <h4 class="card-title">{{ product.product_name }}</h4>
+                        <div class="row d-flex justify-content-center card_descriptive_words">
+                            {% for adjective in product.descriptive_words %}
+                            <h5 class="descritive_product_words">{{ adjective }}.</h5>
+                            {% endfor %}
+                        </div>
+                        <p class="card-text">{{ product.product_price }}</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="btt-button shadow-sm rounded-0 border border-black">
+            <a class="btt-link d-flex h-100">
+                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+            </a>
+        </div>
 </section>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
+    })
+</script>
+
+<script type="text/javascript">
+    $('#sort-selector').change(function () {
+        var selector = $(this);
+        var currentUrl = new URL(window.location);
+
+        var selectedVal = selector.val();
+        if (selectedVal != "reset") {
+            var sort = selectedVal.split("__")[0];
+            var direction = selectedVal.split("__")[1];
+
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
+
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+
+            window.location.replace(currentUrl);
+        }
+    })
+</script>
 {% endblock %}
