--- a/static/css/base.css
+++ b/static/css/base.css
@@ -89,7 +89,8 @@ body {
 
 #products-hero-image {
     background-image: url('/media/banner3.png');
-    object-fit: contain;
+    background-size: cover;
+    background-position: center;
 }
 
 
@@ -182,9 +183,26 @@ body {
 
 /* Product page */
 
+.card {
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    border: none;
+}
+
 .card_descriptive_words h5 {
     margin-left: 8px;
 
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /* products details page */
