--- a/templates/base.html
+++ b/templates/base.html
@@ -166,6 +166,14 @@
     {% block hero %}
     {% endblock %}
 
+    <section>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col">
+                <h4 class=" my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+            </div>
+        </div>
+    </section>
+
     {% block content %}
 
     {% endblock %}
