--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -20,29 +20,46 @@
             <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                 {% csrf_token %}
                 <div class="form-row">
-                    <div class="col-12">
+                    <div class="col-12 text-center">
                         <p class="mt-3"><strong>Quantity:</strong></p>
-                        <div class="form-group text-center">
+                        <div class="form-group w-50">
                             <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <button class="decrement-qty btn btn-black rounded-0"
+                                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-minus white-text"></i>
+                                        </span>
+                                    </button>
+                                </div>
                                 <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
                                     max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                <div class="input-group-append">
+                                    <button class="increment-qty btn btn-black rounded-0"
+                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-plus white-text"></i>
+                                        </span>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-12">
-                        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
-                            <span class="icon">
-                                <i class="fas fa-chevron-left"></i>
-                            </span>
-                            <span class="text-uppercase btn btn-secondary">Keep Shopping</span>
-                        </a>
-                        <input type="submit" class="btn btn-primary rounded-0 text-uppercase mt-5" value="Add to Bag">
-                    </div>
-                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
                 </div>
-            </form>
+
+                <div class="col-12">
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase btn btn-secondary">Keep Shopping</span>
+                    </a>
+                    <input type="submit" class="btn btn-primary rounded-0 text-uppercase mt-5" value="Add to Cart">
+                </div>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
         </div>
+        </form>
+    </div>
     </div>
 </section>
 
@@ -255,4 +272,9 @@
 {% block extra_js %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
