--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -62,12 +62,12 @@
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="small mb-0 text-black font-weight-bold">
-                            {{ item.product.name }}{% if item.product_size %} - Size
+                            {{ item.product.product_name }}{% if item.product_size %} - Size
                             {{ item.product.size|upper }}{% endif %}
                         </p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right">
-                        <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                        <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.product_price }} each</p>
                     </div>
                 </div>
                 {% endfor %}
@@ -191,15 +191,25 @@
             </div>
         </div>
     </div>
-    <div class="row text-center">
+    <div class="row">
         <div class="col-12 col-lg-7 text-right">
+            {% if from_profile %}
+            <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                <span class="icon mr-2">
+                    <i class="fas fa-angle-left"></i>
+                </span>
+                <span class="text-uppercase">Back to Profile</span>
+            </a>
+            {% else %}
             <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
                 <span class="icon mr-2">
                     <i class="fas fa-gifts"></i>
                 </span>
                 <span class="text-uppercase">Now check out the latest deals!</span>
             </a>
+            {% endif %}
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
