--- a/events/templates/events/add_events.html
+++ b/events/templates/events/add_events.html
@@ -16,20 +16,19 @@
         <div class="col-12 col-md-6">
             <hr>
             <h2 class="logo-font mb-4">Event Management</h2>
-            <h5 class="text-muted">Edit a Event</h5>
+            <h5 class="text-muted">Add a Event</h5>
             <hr>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
-                enctype="multipart/form-data">
+            <form method="POST" action="{% url 'add_event' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="#">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Update Event</button>
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'events' %}">Cancel</a>
+                    <button class="btn btn-black rounded-0" type="submit">Add Event</button>
                 </div>
             </form>
         </div>
