--- a/events/templates/events/edit_event.html
+++ b/events/templates/events/edit_event.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
-            <h2 class="logo-font mb-4">Event Management</h2>
+            <h2 class="logo-font mb-4">Event Events</h2>
             <h5 class="text-muted">Edit a Event</h5>
             <hr>
         </div>
@@ -23,7 +23,7 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
+            <form method="POST" action="{% url 'edit_event' event.id %}" class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
