--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -66,16 +66,16 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <small class="ml-3">
-                        <a href="">Edit</a> |
-                        <a class="text-danger" href="">Delete</a>
+                        <a href="{% url 'edit_event' event.id %}">Edit {{ event.id }}</a> |
+                        <a class="text-danger" href="{% url 'delete_event' event.id %}">Delete {{ event.id}}</a>
                     </small></li>
                 </div>
             </div>
             <hr>
+            {% endfor %}
         </div>
     </div>
-    {% endfor %}
-    </div>
-    </div>
 </section>
+
+
 {% endblock %}
