--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -60,6 +60,7 @@
                 <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                 <a href="{% url 'send_newsletter' %}" class="dropdown-item">Create Newsletter</a>
                 <a href="{% url 'view_email_list' %}" class="dropdown-item">Newsletter signups</a>
+                <a href="{% url 'add_event' %}" class="dropdown-item">Add Events</a>
 
                 {% endif %}
                 <a href="" class="dropdown-item">My Profile</a>
